# ExerciciosDeLogica

./: .gitignore
C/: Alturas.c  CMakeLists.txt  baskara.c  crescente.c  diagonal_negativos.c  idades.c  media_idades.c  menor_de_tres.c  negativos.c  notas.c  retangulo.c  soma_impares.c  soma_linhas.c  soma_vetor.c  tabuada.c  terreno.c
C++/: CMakeLists.txt  alturas.cpp  crescente.cpp  diagonal_negativos.cpp  idades.cpp  menor_de_tres.cpp  retangulo.cpp  soma_impares.cpp
Java/: crescente.java  diagonal_negativos.java  idades.java  menor_de_tres.java  retangulo.java  soma_impares.java  soma_vetor.java
