cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(retangulo retangulo.cpp)
add_executable(idades idades.cpp)
add_executable(menor_de_tres menor_de_tres.cpp)
add_executable(crescente crescente.cpp)
add_executable(soma_impares soma_impares.cpp)
add_executable(alturas alturas.cpp)
add_executable(diagonal_negativos diagonal_negativos.cpp)
